--- a/style.css
+++ b/style.css
@@ -9,9 +9,9 @@ body {
 }
 
 .navbar {
-    background-color: #ffffff;
+    background-color: white;
     border-bottom: 1px solid #eaeaea;
-    padding: 10px 20px;
+    padding: 20px 20px;
     position: sticky; 
     top: 0; 
     z-index: 1000; 
@@ -31,7 +31,7 @@ body {
 }
 .logo {
     position: absolute; 
-    top: 10px; 
+    top: 20px; 
     left: 20px; 
 }
 
