--- a/style.css
+++ b/style.css
@@ -83,27 +83,35 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #f9f9f9;
+    background: linear-gradient(#b4d0e6 80%, #fff 20%);
     padding: 60px 20px;
-    max-width: 1200px;
+    max-width: 100%;
     margin: 0 auto;
 }
 
 .main-content {
     flex: 1;
     padding-right: 20px;
+   
+}
+.pap {
+position: absolute;
+top: 25em;
 }
 
 .main-content h1 {
-    font-size: 4rem;
-    margin-bottom: 20px;
-    
+    font-size: 5.3rem;
+    width: 60%;
+    margin-left: 3.2em;
+    padding-top: 20px;
+    padding-bottom: 50px;
+   
 }
 
 .main-content p {
     font-size: 16px;
-    margin-bottom: 20px;
-    color: #666;
+    width: 21%;
+    margin-left: 17em;
 }
 
 .start-button {
@@ -113,7 +121,9 @@ body {
     padding: 10px 20px;
     text-decoration: none;
     font-size: 16px;
-    margin-bottom: 10px;
+    margin-left: 17em;
+    margin-top: 25px;
+    margin-bottom: 30px;
 }
 
 .start-button:hover {
@@ -122,12 +132,12 @@ body {
 
 .cancel-text {
     font-size: 12px;
-    color: #999;
 }
 
 .main-image img {
-    max-width: 100%;
+    max-width: 45%;
     height: auto;
+  margin-left: 40em;
 }
 
 
