--- a/style.css
+++ b/style.css
@@ -141,3 +141,45 @@ top: 25em;
 }
 
 
+.tables {
+    width: 80%;
+  margin: auto; 
+  background-color: white;
+ padding-left: 10%;
+}
+.tables h2 {
+    font-size: 2.5rem;
+    padding-top: 40px;
+}
+.radio {
+    display: none;
+  }
+
+  .radio + label {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    border: 2px solid #0070f3;
+    border-radius: 50%; 
+    background-color: #fff;
+    cursor: pointer;
+    position: relative;
+    margin-right: 10px;
+    margin-top: 5em;
+  }
+
+  .radio:checked + label {
+    background-color: #0070f3;
+  }
+
+  .radio:checked + label::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 10px;
+    height: 10px;
+    background-color: #fff;
+    border-radius: 50%;
+    transform: translate(-50%, -50%);
+  }
